# HSYTP

./: .gitignore
AE/backend/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
AE/backend/.github/workflows/: ci.yml
AE/backend/app/: main.py
AE/backend/app/api/: deps.py
AE/backend/app/api/v1/: router.py
AE/backend/app/api/v1/endpoints/: auth.py  historical.py  instruments.py  market.py
AE/backend/app/cache/: historical_cache.py  redis_cache.py
AE/backend/app/clients/: base_client.py
AE/backend/app/core/: config.py  security.py  utils.py
AE/backend/app/crud/: base.py  historical.py  instruments.py  market.py  tokens.py  users.py
AE/backend/app/db/: base.py  session.py  utils.py
AE/backend/app/middleware/: rate_limiting.py
AE/backend/app/models/: __init__.py  base_model.py  historical.py  instruments.py  market.py  users.py
AE/backend/app/schemas/: base.py  historical.py  instruments.py  market.py  users.py
AE/backend/app/tasks/: timescaledb.py
AE/backend/app/utils/: i18n.py  password.py  response.py
AE/backend/docs/: ARCHITECTURE.md  DEVELOPMENT_PRIORITIES.md  IMPLEMENTATION.md  PRD.md  STRUCTURE.md  TIMESCALEDB.md
AE/backend/migrations/: env.py
AE/backend/scripts/: insert_test_historical_data.py  manage_timescaledb.py  visualize_historical_data.py
AE/backend/tests/: conftest.py
AE/backend/tests/api/: test_auth.py  test_historical.py  test_instruments.py  test_market.py  test_rate_limiting.py
AE/backend/tests/utils/: test_i18n.py
AE/backend_v2/: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  alembic.ini.example  pyproject.toml  pytest.ini  test.db-journal
AE/backend_v2/app/: main.py
AE/backend_v2/app/api/: README.md  __init__.py  dependencies.py
AE/backend_v2/app/api/common/: __init__.py  filtering.py  pagination.py  query_params.py  sorting.py
AE/backend_v2/app/api/v1/: router.py
AE/backend_v2/app/cache/: README.md  __init__.py  base_cache.py  memory_cache.py  redis_cache.py
AE/backend_v2/app/core/: logging.py  security.py  startup.py
AE/backend_v2/app/core/config/: __init__.py  base.py  development.py  production.py  testing.py
AE/backend_v2/app/db/: base.py  base_class.py  session.py
AE/backend_v2/app/db/migrations/: __init__.py  env.py
AE/backend_v2/app/errors/: __init__.py  error_codes.py  exceptions.py  handlers.py
AE/backend_v2/app/middleware/: __init__.py  cors.py  language.py  logging_middleware.py  rate_limiting.py
AE/backend_v2/app/modules/: __init__.py
AE/backend_v2/app/modules/auth/: __init__.py  api.py  crud.py  dependencies.py  models.py  schemas.py  service.py
AE/backend_v2/app/modules/instruments/: __init__.py  api.py  config.py  crud.py  dependencies.py  models.py  schemas.py  service.py  utils.py
AE/backend_v2/app/monitoring/: __init__.py  health.py  metrics.py  tracing.py
AE/backend_v2/app/utils/: __init__.py  datetime_utils.py  i18n.py  response.py
AE/backend_v2/scripts/: seed_data.py  setup_db.py
AE/backend_v2/tests/: conftest.py
AE/backend_v2/tests/e2e/: __init__.py
AE/backend_v2/tests/e2e/api/: __init__.py  test_auth_flow.py
AE/backend_v2/tests/e2e/scenarios/: __init__.py
AE/backend_v2/tests/integration/: test_auth_api.py
AE/backend_v2/tests/integration/cache/: __init__.py
AE/backend_v2/tests/integration/db/: __init__.py  test_auth_db.py
AE/backend_v2/tests/unit/core/: __init__.py
AE/backend_v2/tests/unit/modules/: __init__.py
AE/backend_v2/tests/unit/modules/auth/: __init__.py  test_auth_authorization.py  test_auth_crud.py  test_auth_edge_cases.py  test_auth_security.py  test_auth_service.py  test_auth_validation.py
AE/backend_v2/tests/unit/utils/: __init__.py  test_datetime_utils.py  test_response.py
AE/backend_v3/: .env.example  README.md  pyproject.toml
AE/backend_v3/app/: main.py
AE/backend_v3/app/api/: dependencies.py
AE/backend_v3/app/api/v1/: router.py
AE/backend_v3/app/clients/: market_data_client.py
AE/backend_v3/app/modules/auth/: __init__.py  api.py  dependencies.py  models.py  repository.py  schemas.py  service.py
AE/backend_v3/app/modules/instruments/: __init__.py  api.py  dependencies.py  models.py  repository.py  schemas.py  service.py  utils.py
AE/backend_v3/app/scheduler/: manager.py  scheduler.py
AE/backend_v3/app/scheduler/tasks/: indices_tasks.py  prices_tasks.py  stocks_tasks.py
AE/backend_v3/migrations/: README  env.py
AE/backend_v3/migrations/versions/: a43dbaa197ea_initial_migration.py  d944f55c936f_fix_instrument_price_history_.py  e8c94ea0ef00_add_index_constituents_table_for_index_.py
AE/frontend/: README.md  next.config.ts  package.json
AE/frontend/messages/: en.json  tr.json
AE/frontend/src/: middleware.ts
AE/frontend/src/app/: layout.tsx
AE/frontend/src/app/[locale]/: globals.css  layout.tsx  not-found.tsx  page.tsx
AE/frontend/src/components/: index.ts
AE/frontend/src/components/features/: economic-event-list.tsx  index.ts  market-index-list.tsx  market-overview.tsx  news-list.tsx  portfolio-optimization-input.tsx  portfolio-optimization-output.tsx  post-list.tsx  product-list.tsx  stock-list.tsx
AE/frontend/src/components/layout/: footer.tsx  header.tsx  hero.tsx  index.ts  section-wrapper.tsx
AE/frontend/src/components/ui/: economic-event-card.tsx  form-fields.tsx  index-card.tsx  index.ts  language-switcher.tsx  logo.tsx  market-summary.tsx  mode-toggle.tsx  news-card.tsx  post-card.tsx  product-card.tsx  search-bar.tsx  stock-card.tsx  typography.tsx
AE/frontend/src/data/: navigation.ts  products.ts
AE/frontend/src/i18n/: request.ts  routing.ts
AE/frontend/src/lib/: README.md  constants.ts  encryption.ts  form-builder.tsx  logger.ts  mock-data.ts  requests.ts  storage.ts
AE/frontend/src/lib/api/: README.md  api.ts  auth-token-manager.ts  cache-manager.ts  cache.ts  circuit-breaker.ts  index.ts  (+5 more)
BKD/PortfolioOptimization/: ABC.py  ABD_RFR.py  Evaluate.py  Optimizer.py  Portfolio.py  TFS.py  TimeSeries.py  TimeSeriesV2.py  app.py  requirements.txt  test.py
BKD/PortfolioOptimization/sklearn-env/: pyvenv.cfg
(+37 files in other folders)
